<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/EidosText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Eidos"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PosotitaText" />

    <Button
        android:id="@+id/EidosButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/Eidos"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EidosText" />

    <Button
        android:id="@+id/EidosButtonRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/Remove"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/EidosButtonAdd"
        app:layout_constraintTop_toBottomOf="@+id/EidosText" />

    <Button
        android:id="@+id/EidosButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/Add"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/EidosButton"
        app:layout_constraintTop_toBottomOf="@+id/EidosText" />

    <EditText
        android:id="@+id/ApostoleasText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Apostoleas"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EidosButton" />

    <Button
        android:id="@+id/ApostoleasButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/Apostoleas"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ApostoleasText" />

    <Button
        android:id="@+id/ApostoleasButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/Add"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/ApostoleasButton"
        app:layout_constraintTop_toBottomOf="@+id/ApostoleasText" />

    <Button
        android:id="@+id/ApostoleasButtonRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/Remove"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/ApostoleasButtonAdd"
        app:layout_constraintTop_toBottomOf="@+id/ApostoleasText" />

    <EditText
        android:id="@+id/KomistraText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Komistra"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ApostoleasButton" />

    <EditText
        android:id="@+id/AntikatavoliText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Antikatavoli"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KomistraText" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/KatathesiSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/Katathesi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AntikatavoliText" />

    <Spinner
        android:id="@+id/KatathesiSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/KatathesiSwitch"
        app:layout_constraintTop_toBottomOf="@+id/AntikatavoliText" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/ParalaviSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Paralavi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KatathesiSwitch" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/RantevouSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Rantevou"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ParalaviSwitch" />

    <Spinner
        android:id="@+id/RantevouSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/RantevouSwitch"
        app:layout_constraintTop_toBottomOf="@+id/ParalaviSwitch" />

    <Button
        android:id="@+id/ShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Minima"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RantevouSwitch" />

    <EditText
        android:id="@+id/PosotitaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/Posotita"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>